# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  nm_math.c  nm_math.h  scene.c  scene.h  types.h  util.c  util.h  vec3.c
